Better handling of server api errors